--- a/OOP_Lab1/OOP_Lab1.csproj
+++ b/OOP_Lab1/OOP_Lab1.csproj
@@ -53,6 +53,7 @@
             <DependentUpon>Form1.cs</DependentUpon>
         </Compile>
         <Compile Include="MyClass\InternetOp.cs" />
+        <Compile Include="MyExceptions\UndefinedOperatorException.cs" />
         <Compile Include="Program.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
         <EmbeddedResource Include="Form1.resx">
